--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: 20 14.3% 4.1%;
+    --foreground: 0 0% 100%;
+
+    --card: 20 14.3% 4.1%;
+    --card-foreground: 0 0% 100%;
+
+    --popover: 20 14.3% 4.1%;
+    --popover-foreground: 0 0% 100%;
+
+    /* --primary: 20.5 90.2% 48.2%; */
+    --primary: 207 100% 70%;
+    --primary-foreground: 0 0% 100%;
+
+    --secondary: 12 6.5% 15.1%;
+    --secondary-foreground: 0 0% 100%;
+
+    --muted: 12 6.5% 15.1%;
+    --muted-foreground: 24 5.4% 63.9%;
+
+    --accent: 12 6.5% 15.1%;
+    --accent-foreground: 0 0% 100%;
+
+    --destructive: 0 72.2% 50.6%;
+    --destructive-foreground: 0 0% 100%;
+
+    --border: 12 6.5% 15.1%;
+    --input: 12 6.5% 15.1%;
+    --ring: 207 100% 70%;
+
+    --radius: 0.5rem;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-synthesis: none;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
